--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+header{
+  width: 100vw;
+  background: #65CBCB;
+  padding: 8px;
+  margin-bottom: 20px;
+  box-sizing: border-box;
+}
+
+.container{
+  width: 100%;
+  max-width: 1000px;
+  margin: auto;
+}
+
+.title{
+  margin-left: 20px;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+}
